Fix the sidebar space on mobile view

--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -14,6 +14,7 @@ aside {
   @include transition;
   @media ( max-width: $max-small ) {
     max-width: 250px;
+    height: calc(100% + 100px);
   }
   .b-image {
     padding: 20px 20px 0;
